Fixed 8,Blinking, Done 9.hide and unhide, Done 10.Collapsing

--- a/8. Blinking/style.scss
+++ b/8. Blinking/style.scss
@@ -21,23 +21,26 @@ body {
 
 @keyframes blink {
   0% {
-    opacity: 0.2;
+    color: yellow;
+    opacity: 0;
   }
-  90% {
+  10% {
+    color: yellow;
     opacity: 1;
     text-shadow: none;
   }
   100% {
-    opacity: 1;
+    color: yellow;
+    opacity: 0;
     text-shadow: none;
   }
 }
 
 span {
-  color: rgb(255, 255, 0);
+  color: rgb(65, 65, 65);
   font-size: 70px;
   letter-spacing: 10px;
-  text-shadow: 0px 0px 10px yellow, 0px 0px 40px orange;
+  text-shadow: 0px 0px 5px yellow;
   animation: blink 1s linear infinite;
 }
 
